# yoda

./: .gitignore  .travis.yml  404.html  CNAME  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  TODO.md  click  config.py  docker-compose.yml  dude.py  index.html  keybindings.csv  main.py  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml  util.py  viginere.py  webcheck.py  yoda.py
.circleci/: config.yml
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  failing-test.md
.github/ISSUE_TEMPLATE/: bug-report.md  enhancement.md  failing-test.md  support.md
.github/workflows/: ci.yml
config/: index.html
contributors/: index.html
docs/: mkdocs.yml
docs/docs/: config.md  contributors.md  index.md  license.md  modules.md  pluginlist.md  plugins.md
license/: index.html
modules/: .diary.py.swp  __init__.py  alias.py  asciiator.py  chat.py  config.py  dev.py  diary.py  entertainment.py  family.py  fashion.py  food.py  gif.py  git.py  goals.py  health.py  index.html  keep.py  learn.py  life.py  love.py  money.py  people.py  setup.py  study.py  util.py  weather.py
modules/ciphers/: __init__.py  atbash.py  caesar.py  hill.py  morse.py  rot13.py  vigenere.py
modules/test/: test_main.py
pluginlist/: index.html
plugins/: index.html
plugins/hi_plugin/: pyproject.toml
resources/: vocab-words.txt
resources/hackerearth/: api_handlers.py  language.py  parameters.py  result.py  settings.py
resources/vocabulary/: beyond_hit_parade_1.list  beyond_hit_parade_2.list  hit_parade_1.list  hit_parade_2.list  hit_parade_3.list  hit_parade_4.list
search/: search_index.json
src/cli/: yoda.py
src/config/: server.py
src/yodapa/: config.py  hi.py  plugin.py  yoda.py
tests/: test.py  test_alias.py  test_asciiator.py  test_basic.py  test_chat.py  test_config.py  test_diary.py  test_feedback.py  test_gif.py  test_goals.py  test_health.py  test_love.py  test_money.py  test_people.py  test_setup.py  test_simple.py  test_weather.py
tests/alias/: test_alias.py
tests/ciphers/: test_atbash.py  test_ceaser.py  test_input.py  test_rot13.py
tests/dev/: test_cc.py  test_checksite.py  test_fileshare.py  test_gitsummary.py  test_grep.py  test_horoscope.py  test_iplookup.py  test_keybindings.py  test_mp3cutter.py  test_portscan.py  test_run.py  test_speedtest.py  test_url.py  test_vigenere.py  test_whois.py
tests/entertainment/: test_lyrics.py
yodapa/: __init__.py  hi.py
(+28 files in other folders)
