[tool.poetry]
name = "yodapa"
version = "0.4.0"
description = "Personal Assistant on the command line"
authors = ["Man Parvesh Singh Randhawa <manparveshsinghrandhawa@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "yodapa", from = "src" }
]
repository = "https://github.com/yoda-pa/yoda/tree/v2"
homepage = "https://yoda-pa.github.io/"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.12.5"
pytest = "^8.3.3"
pyyaml = "^6.0.2"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.39"
ollama = "^0.3.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"


[tool.poetry.group.docs.dependencies]
mkdocstrings = { extras = ["python"], version = "^0.26.1" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
yoda = "cli.yoda:app"
