[tool.poetry]
name = "yodapa"
version = "0.5.1"
description = "Personal Assistant on the command line"
authors = ["Man Parvesh Singh Randhawa <manparveshsinghrandhawa@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "yodapa", from = "src" }
]
repository = "https://github.com/yoda-pa/yoda/tree/v2"
homepage = "https://yoda-pa.github.io/yoda"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.12.5"
pyyaml = "^6.0.2"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.39"
ollama = "^0.3.3"
uvicorn = { extras = ["standard"], version = "^0.31.1" }
fastapi = { extras = ["standard"], version = "^0.115.0" }
supervisor = "^4.2.5"
sqlmodel = "^0.0.22"
requests = "^2.32.3"
speedtest-cli = "^2.1.3"
python-whois = "^0.9.4"


[tool.poetry.group.docs.dependencies]
mkdocstrings = { extras = ["python"], version = "^0.26.1" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
yoda = "yodapa.yoda:app"
